xsm_expl/Stages/5-w/Frontend/y.output
   0  $accept : start $end

   1  start : GDeclBlock FDefBlock MainBlock
   2        | GDeclBlock MainBlock
   3        | GDeclBlock

   4  Slist : Slist Stmt SEMICOLON
   5        | Stmt SEMICOLON

   6  Stmt : inputStmt
   7       | outputStmt
   8       | assignStmt
   9       | ifStmt
  10       | whileStmt
  11       | doWhileStmt
  12       | breakStmt
  13       | continueStmt
  14       | breakPointStmt

  15  inputStmt : READ expr

  16  outputStmt : WRITE expr

  17  assignStmt : ID EQUAL expr
  18             | ID '[' expr ']' EQUAL expr

  19  retVal : expr

  20  retStmt : RETURN retVal SEMICOLON

  21  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  22         | IF expr THEN Slist ENDIF

  23  whileStmt : WHILE expr DO Slist ENDWHILE

  24  doWhileStmt : DO Slist WHILE expr ENDWHILE

  25  breakStmt : BREAK

  26  continueStmt : CONTINUE

  27  breakPointStmt : BREAKPOINT

  28  GDeclBlock : DECL GDeclList ENDDECL
  29             | DECL ENDDECL

  30  GDeclList : GDeclList GDecl
  31            | GDecl

  32  GDecl : Type GIDList SEMICOLON

  33  Type : INT
  34       | STR

  35  GIDList : GIDList COMMA GID
  36          | GID

  37  GID : ID
  38      | ID '[' NUM ']'
  39      | ID '(' ParamList ')'
  40      | MUL ID

  41  ParamList : ParamList COMMA Param
  42            | Param
  43            |

  44  ParamType : INT
  45            | STR

  46  Param : ParamType ID

  47  ArgList : ArgList COMMA Arg
  48          | Arg
  49          |

  50  Arg : expr

  51  FDefBlock : FDefBlock FDef
  52            | FDef

  53  FID : ID

  54  FDef : FuncSign '{' LDeclBlock FBody '}'

  55  FuncSign : FuncType FID '(' ParamList ')'

  56  FuncType : INT
  57           | STR

  58  FBody : BEGIN_ Slist retStmt END SEMICOLON

  59  LDeclBlock : DECL LDeclList ENDDECL
  60             | DECL ENDDECL

  61  LDeclList : LDeclList LDecl
  62            | LDecl

  63  LDecl : Type LIDList SEMICOLON

  64  LIDList : LIDList COMMA LID
  65          | LID

  66  LID : ID

  67  MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody '}'

  68  MainFunc : INT MAIN

  69  MBody : BEGIN_ Slist retStmt END SEMICOLON

  70  expr : expr PLUS expr
  71       | expr MINUS expr
  72       | expr MUL expr
  73       | expr DIV expr
  74       | expr MOD expr
  75       | AMPERSAND expr
  76       | MUL expr
  77       | expr EQ expr
  78       | expr NEQ expr
  79       | expr LT expr
  80       | expr LTE expr
  81       | expr GT expr
  82       | expr GTE expr
  83       | expr AND expr
  84       | expr OR expr
  85       | NOT expr
  86       | '(' expr ')'
  87       | ID '(' ArgList ')'
  88       | ID '[' expr ']'
  89       | ID
  90       | NUM
  91       | STRING

state 0
	$accept : . start $end  (0)

	DECL  shift 1
	.  error

	start  goto 2
	GDeclBlock  goto 3


state 1
	GDeclBlock : DECL . GDeclList ENDDECL  (28)
	GDeclBlock : DECL . ENDDECL  (29)

	ENDDECL  shift 4
	INT  shift 5
	STR  shift 6
	.  error

	GDeclList  goto 7
	GDecl  goto 8
	Type  goto 9


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : GDeclBlock . FDefBlock MainBlock  (1)
	start : GDeclBlock . MainBlock  (2)
	start : GDeclBlock .  (3)

	INT  shift 10
	STR  shift 11
	$end  reduce 3

	FDefBlock  goto 12
	MainBlock  goto 13
	FDef  goto 14
	FuncSign  goto 15
	FuncType  goto 16
	MainFunc  goto 17


state 4
	GDeclBlock : DECL ENDDECL .  (29)

	.  reduce 29


state 5
	Type : INT .  (33)

	.  reduce 33


state 6
	Type : STR .  (34)

	.  reduce 34


state 7
	GDeclBlock : DECL GDeclList . ENDDECL  (28)
	GDeclList : GDeclList . GDecl  (30)

	ENDDECL  shift 18
	INT  shift 5
	STR  shift 6
	.  error

	GDecl  goto 19
	Type  goto 9


state 8
	GDeclList : GDecl .  (31)

	.  reduce 31


state 9
	GDecl : Type . GIDList SEMICOLON  (32)

	ID  shift 20
	MUL  shift 21
	.  error

	GIDList  goto 22
	GID  goto 23


state 10
	FuncType : INT .  (56)
	MainFunc : INT . MAIN  (68)

	MAIN  shift 24
	ID  reduce 56


state 11
	FuncType : STR .  (57)

	.  reduce 57


state 12
	start : GDeclBlock FDefBlock . MainBlock  (1)
	FDefBlock : FDefBlock . FDef  (51)

	INT  shift 10
	STR  shift 11
	.  error

	MainBlock  goto 25
	FDef  goto 26
	FuncSign  goto 15
	FuncType  goto 16
	MainFunc  goto 17


state 13
	start : GDeclBlock MainBlock .  (2)

	.  reduce 2


state 14
	FDefBlock : FDef .  (52)

	.  reduce 52


state 15
	FDef : FuncSign . '{' LDeclBlock FBody '}'  (54)

	'{'  shift 27
	.  error


state 16
	FuncSign : FuncType . FID '(' ParamList ')'  (55)

	ID  shift 28
	.  error

	FID  goto 29


state 17
	MainBlock : MainFunc . '(' ')' '{' LDeclBlock MBody '}'  (67)

	'('  shift 30
	.  error


state 18
	GDeclBlock : DECL GDeclList ENDDECL .  (28)

	.  reduce 28


state 19
	GDeclList : GDeclList GDecl .  (30)

	.  reduce 30


state 20
	GID : ID .  (37)
	GID : ID . '[' NUM ']'  (38)
	GID : ID . '(' ParamList ')'  (39)

	'['  shift 31
	'('  shift 32
	SEMICOLON  reduce 37
	COMMA  reduce 37


state 21
	GID : MUL . ID  (40)

	ID  shift 33
	.  error


state 22
	GDecl : Type GIDList . SEMICOLON  (32)
	GIDList : GIDList . COMMA GID  (35)

	SEMICOLON  shift 34
	COMMA  shift 35
	.  error


state 23
	GIDList : GID .  (36)

	.  reduce 36


state 24
	MainFunc : INT MAIN .  (68)

	.  reduce 68


state 25
	start : GDeclBlock FDefBlock MainBlock .  (1)

	.  reduce 1


state 26
	FDefBlock : FDefBlock FDef .  (51)

	.  reduce 51


state 27
	FDef : FuncSign '{' . LDeclBlock FBody '}'  (54)

	DECL  shift 36
	.  error

	LDeclBlock  goto 37


state 28
	FID : ID .  (53)

	.  reduce 53


state 29
	FuncSign : FuncType FID . '(' ParamList ')'  (55)

	'('  shift 38
	.  error


state 30
	MainBlock : MainFunc '(' . ')' '{' LDeclBlock MBody '}'  (67)

	')'  shift 39
	.  error


state 31
	GID : ID '[' . NUM ']'  (38)

	NUM  shift 40
	.  error


state 32
	GID : ID '(' . ParamList ')'  (39)
	ParamList : .  (43)

	INT  shift 41
	STR  shift 42
	COMMA  reduce 43
	')'  reduce 43

	ParamList  goto 43
	Param  goto 44
	ParamType  goto 45


state 33
	GID : MUL ID .  (40)

	.  reduce 40


state 34
	GDecl : Type GIDList SEMICOLON .  (32)

	.  reduce 32


state 35
	GIDList : GIDList COMMA . GID  (35)

	ID  shift 20
	MUL  shift 21
	.  error

	GID  goto 46


state 36
	LDeclBlock : DECL . LDeclList ENDDECL  (59)
	LDeclBlock : DECL . ENDDECL  (60)

	ENDDECL  shift 47
	INT  shift 5
	STR  shift 6
	.  error

	Type  goto 48
	LDeclList  goto 49
	LDecl  goto 50


state 37
	FDef : FuncSign '{' LDeclBlock . FBody '}'  (54)

	BEGIN_  shift 51
	.  error

	FBody  goto 52


state 38
	FuncSign : FuncType FID '(' . ParamList ')'  (55)
	ParamList : .  (43)

	INT  shift 41
	STR  shift 42
	COMMA  reduce 43
	')'  reduce 43

	ParamList  goto 53
	Param  goto 44
	ParamType  goto 45


state 39
	MainBlock : MainFunc '(' ')' . '{' LDeclBlock MBody '}'  (67)

	'{'  shift 54
	.  error


state 40
	GID : ID '[' NUM . ']'  (38)

	']'  shift 55
	.  error


state 41
	ParamType : INT .  (44)

	.  reduce 44


state 42
	ParamType : STR .  (45)

	.  reduce 45


state 43
	GID : ID '(' ParamList . ')'  (39)
	ParamList : ParamList . COMMA Param  (41)

	COMMA  shift 56
	')'  shift 57
	.  error


state 44
	ParamList : Param .  (42)

	.  reduce 42


state 45
	Param : ParamType . ID  (46)

	ID  shift 58
	.  error


state 46
	GIDList : GIDList COMMA GID .  (35)

	.  reduce 35


state 47
	LDeclBlock : DECL ENDDECL .  (60)

	.  reduce 60


state 48
	LDecl : Type . LIDList SEMICOLON  (63)

	ID  shift 59
	.  error

	LIDList  goto 60
	LID  goto 61


state 49
	LDeclBlock : DECL LDeclList . ENDDECL  (59)
	LDeclList : LDeclList . LDecl  (61)

	ENDDECL  shift 62
	INT  shift 5
	STR  shift 6
	.  error

	Type  goto 48
	LDecl  goto 63


state 50
	LDeclList : LDecl .  (62)

	.  reduce 62


state 51
	FBody : BEGIN_ . Slist retStmt END SEMICOLON  (58)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 69
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	.  error

	Slist  goto 73
	Stmt  goto 74
	inputStmt  goto 75
	outputStmt  goto 76
	assignStmt  goto 77
	ifStmt  goto 78
	whileStmt  goto 79
	doWhileStmt  goto 80
	breakStmt  goto 81
	continueStmt  goto 82
	breakPointStmt  goto 83


state 52
	FDef : FuncSign '{' LDeclBlock FBody . '}'  (54)

	'}'  shift 84
	.  error


state 53
	ParamList : ParamList . COMMA Param  (41)
	FuncSign : FuncType FID '(' ParamList . ')'  (55)

	COMMA  shift 56
	')'  shift 85
	.  error


state 54
	MainBlock : MainFunc '(' ')' '{' . LDeclBlock MBody '}'  (67)

	DECL  shift 36
	.  error

	LDeclBlock  goto 86


state 55
	GID : ID '[' NUM ']' .  (38)

	.  reduce 38


state 56
	ParamList : ParamList COMMA . Param  (41)

	INT  shift 41
	STR  shift 42
	.  error

	Param  goto 87
	ParamType  goto 45


state 57
	GID : ID '(' ParamList ')' .  (39)

	.  reduce 39


state 58
	Param : ParamType ID .  (46)

	.  reduce 46


state 59
	LID : ID .  (66)

	.  reduce 66


state 60
	LDecl : Type LIDList . SEMICOLON  (63)
	LIDList : LIDList . COMMA LID  (64)

	SEMICOLON  shift 88
	COMMA  shift 89
	.  error


state 61
	LIDList : LID .  (65)

	.  reduce 65


state 62
	LDeclBlock : DECL LDeclList ENDDECL .  (59)

	.  reduce 59


state 63
	LDeclList : LDeclList LDecl .  (61)

	.  reduce 61


state 64
	assignStmt : ID . EQUAL expr  (17)
	assignStmt : ID . '[' expr ']' EQUAL expr  (18)

	EQUAL  shift 90
	'['  shift 91
	.  error


state 65
	inputStmt : READ . expr  (15)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 99


state 66
	outputStmt : WRITE . expr  (16)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 100


state 67
	breakPointStmt : BREAKPOINT .  (27)

	.  reduce 27


state 68
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (21)
	ifStmt : IF . expr THEN Slist ENDIF  (22)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 101


state 69
	whileStmt : WHILE . expr DO Slist ENDWHILE  (23)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 102


state 70
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (24)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 69
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	.  error

	Slist  goto 103
	Stmt  goto 74
	inputStmt  goto 75
	outputStmt  goto 76
	assignStmt  goto 77
	ifStmt  goto 78
	whileStmt  goto 79
	doWhileStmt  goto 80
	breakStmt  goto 81
	continueStmt  goto 82
	breakPointStmt  goto 83


state 71
	breakStmt : BREAK .  (25)

	.  reduce 25


state 72
	continueStmt : CONTINUE .  (26)

	.  reduce 26


state 73
	Slist : Slist . Stmt SEMICOLON  (4)
	FBody : BEGIN_ Slist . retStmt END SEMICOLON  (58)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 69
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	RETURN  shift 104
	.  error

	Stmt  goto 105
	inputStmt  goto 75
	outputStmt  goto 76
	assignStmt  goto 77
	ifStmt  goto 78
	whileStmt  goto 79
	doWhileStmt  goto 80
	breakStmt  goto 81
	continueStmt  goto 82
	breakPointStmt  goto 83
	retStmt  goto 106


state 74
	Slist : Stmt . SEMICOLON  (5)

	SEMICOLON  shift 107
	.  error


state 75
	Stmt : inputStmt .  (6)

	.  reduce 6


state 76
	Stmt : outputStmt .  (7)

	.  reduce 7


state 77
	Stmt : assignStmt .  (8)

	.  reduce 8


state 78
	Stmt : ifStmt .  (9)

	.  reduce 9


state 79
	Stmt : whileStmt .  (10)

	.  reduce 10


state 80
	Stmt : doWhileStmt .  (11)

	.  reduce 11


state 81
	Stmt : breakStmt .  (12)

	.  reduce 12


state 82
	Stmt : continueStmt .  (13)

	.  reduce 13


state 83
	Stmt : breakPointStmt .  (14)

	.  reduce 14


state 84
	FDef : FuncSign '{' LDeclBlock FBody '}' .  (54)

	.  reduce 54


state 85
	FuncSign : FuncType FID '(' ParamList ')' .  (55)

	.  reduce 55


state 86
	MainBlock : MainFunc '(' ')' '{' LDeclBlock . MBody '}'  (67)

	BEGIN_  shift 108
	.  error

	MBody  goto 109


state 87
	ParamList : ParamList COMMA Param .  (41)

	.  reduce 41


state 88
	LDecl : Type LIDList SEMICOLON .  (63)

	.  reduce 63


state 89
	LIDList : LIDList COMMA . LID  (64)

	ID  shift 59
	.  error

	LID  goto 110


state 90
	assignStmt : ID EQUAL . expr  (17)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 111


state 91
	assignStmt : ID '[' . expr ']' EQUAL expr  (18)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 112


state 92
	expr : ID . '(' ArgList ')'  (87)
	expr : ID . '[' expr ']'  (88)
	expr : ID .  (89)

	'['  shift 113
	'('  shift 114
	PLUS  reduce 89
	MINUS  reduce 89
	MUL  reduce 89
	DIV  reduce 89
	MOD  reduce 89
	THEN  reduce 89
	DO  reduce 89
	ENDWHILE  reduce 89
	AND  reduce 89
	OR  reduce 89
	SEMICOLON  reduce 89
	COMMA  reduce 89
	EQ  reduce 89
	NEQ  reduce 89
	LT  reduce 89
	LTE  reduce 89
	GT  reduce 89
	GTE  reduce 89
	']'  reduce 89
	')'  reduce 89


state 93
	expr : NUM .  (90)

	.  reduce 90


state 94
	expr : STRING .  (91)

	.  reduce 91


state 95
	expr : MUL . expr  (76)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 115


state 96
	expr : AMPERSAND . expr  (75)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 116


state 97
	expr : NOT . expr  (85)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 117


state 98
	expr : '(' . expr ')'  (86)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 118


state 99
	inputStmt : READ expr .  (15)
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	SEMICOLON  reduce 15


state 100
	outputStmt : WRITE expr .  (16)
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	SEMICOLON  reduce 16


state 101
	ifStmt : IF expr . THEN Slist ELSE Slist ENDIF  (21)
	ifStmt : IF expr . THEN Slist ENDIF  (22)
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	THEN  shift 132
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	.  error


state 102
	whileStmt : WHILE expr . DO Slist ENDWHILE  (23)
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	DO  shift 133
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	.  error


state 103
	Slist : Slist . Stmt SEMICOLON  (4)
	doWhileStmt : DO Slist . WHILE expr ENDWHILE  (24)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 134
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	.  error

	Stmt  goto 105
	inputStmt  goto 75
	outputStmt  goto 76
	assignStmt  goto 77
	ifStmt  goto 78
	whileStmt  goto 79
	doWhileStmt  goto 80
	breakStmt  goto 81
	continueStmt  goto 82
	breakPointStmt  goto 83


state 104
	retStmt : RETURN . retVal SEMICOLON  (20)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 135
	retVal  goto 136


state 105
	Slist : Slist Stmt . SEMICOLON  (4)

	SEMICOLON  shift 137
	.  error


state 106
	FBody : BEGIN_ Slist retStmt . END SEMICOLON  (58)

	END  shift 138
	.  error


state 107
	Slist : Stmt SEMICOLON .  (5)

	.  reduce 5


state 108
	MBody : BEGIN_ . Slist retStmt END SEMICOLON  (69)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 69
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	.  error

	Slist  goto 139
	Stmt  goto 74
	inputStmt  goto 75
	outputStmt  goto 76
	assignStmt  goto 77
	ifStmt  goto 78
	whileStmt  goto 79
	doWhileStmt  goto 80
	breakStmt  goto 81
	continueStmt  goto 82
	breakPointStmt  goto 83


state 109
	MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody . '}'  (67)

	'}'  shift 140
	.  error


state 110
	LIDList : LIDList COMMA LID .  (64)

	.  reduce 64


state 111
	assignStmt : ID EQUAL expr .  (17)
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	SEMICOLON  reduce 17


state 112
	assignStmt : ID '[' expr . ']' EQUAL expr  (18)
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	']'  shift 141
	.  error


state 113
	expr : ID '[' . expr ']'  (88)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 142


state 114
	expr : ID '(' . ArgList ')'  (87)
	ArgList : .  (49)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	COMMA  reduce 49
	')'  reduce 49

	expr  goto 143
	Arg  goto 144
	ArgList  goto 145


state 115
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : MUL expr .  (76)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	.  reduce 76


state 116
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : AMPERSAND expr .  (75)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)

	.  reduce 75


state 117
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)
	expr : NOT expr .  (85)

	.  reduce 85


state 118
	expr : expr . PLUS expr  (70)
	expr : expr . MINUS expr  (71)
	expr : expr . MUL expr  (72)
	expr : expr . DIV expr  (73)
	expr : expr . MOD expr  (74)
	expr : expr . EQ expr  (77)
	expr : expr . NEQ expr  (78)
	expr : expr . LT expr  (79)
	expr : expr . LTE expr  (80)
	expr : expr . GT expr  (81)
	expr : expr . GTE expr  (82)
	expr : expr . AND expr  (83)
	expr : expr . OR expr  (84)
	expr : '(' expr . ')'  (86)

	PLUS  shift 119
	MINUS  shift 120
	MUL  shift 121
	DIV  shift 122
	MOD  shift 123
	AND  shift 124
	OR  shift 125
	EQ  shift 126
	NEQ  shift 127
	LT  shift 128
	LTE  shift 129
	GT  shift 130
	GTE  shift 131
	')'  shift 146
	.  error


state 119
	expr : expr PLUS . expr  (70)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 147


state 120
	expr : expr MINUS . expr  (71)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 148


state 121
	expr : expr MUL . expr  (72)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 149


state 122
	expr : expr DIV . expr  (73)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 150


state 123
	expr : expr MOD . expr  (74)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 151


state 124
	expr : expr AND . expr  (83)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 152


state 125
	expr : expr OR . expr  (84)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 153


state 126
	expr : expr EQ . expr  (77)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 154


state 127
	expr : expr NEQ . expr  (78)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 155


state 128
	expr : expr LT . expr  (79)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 156


state 129
	expr : expr LTE . expr  (80)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 157


state 130
	expr : expr GT . expr  (81)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 158


state 131
	expr : expr GTE . expr  (82)

	ID  shift 92
	NUM  shift 93
	STRING  shift 94
	MUL  shift 95
	AMPERSAND  shift 96
	NOT  shift 97
	'('  shift 98
	.  error

	expr  goto 159


state 132
	ifStmt : IF expr THEN . Slist ELSE Slist ENDIF  (21)
	ifStmt : IF expr THEN . Slist ENDIF  (22)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 69
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	.  error

	Slist  goto 160
	Stmt  goto 74
	inputStmt  goto 75
	outputStmt  goto 76
	assignStmt  goto 77
	ifStmt  goto 78
	whileStmt  goto 79
	doWhileStmt  goto 80
	breakStmt  goto 81
	continueStmt  goto 82
	breakPointStmt  goto 83


state 133
	whileStmt : WHILE expr DO . Slist ENDWHILE  (23)

	ID  shift 64
	READ  shift 65
	WRITE  shift 66
	BREAKPOINT  shift 67
	IF  shift 68
	WHILE  shift 69
	DO  shift 70
	BREAK  shift 71
	CONTINUE  shift 72
	.  error
